create subscribe form #1

--- a/index.html
+++ b/index.html
@@ -429,12 +429,15 @@
                     <form class="subscribe__form">
                         <label for="email"></label>
                         <input type="text" id="email" name="email" autocomplete="off">
-                        <input type="submit" value="Subscribe">
+                        <input type="submit" value="Subscribe" />
                     </form>
                 </div>
             </div>
         </section>
     </div>
+</section>
+<section class="logos">
+
 </section>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
