--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                     <form class="subscribe__form">
                         <label for="email"></label>
                         <input type="text" id="email" name="email" autocomplete="off">
-                        <input type="submit" value="Subscribe" />
+                        <input type="submit" value="Subscribe"/>
                     </form>
                 </div>
             </div>
@@ -437,7 +437,123 @@
     </div>
 </section>
 <section class="logos">
-
+    <div class="logos__container">
+        <div class="logos__images"><img src="images/logos-images.svg" alt="image"></div>
+    </div>
+</section>
+<section class="footer">
+    <div class="footer__container">
+        <div class="footer__content">
+        <div class="footer__column">
+            <div class="footer__title">About company</div>
+            <div class="footer__info">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh velit it’s a cold
+                world out there.
+            </div>
+            <div class="footer__contacts">
+                <div class="footer__address">
+                    <span class="footer__icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                    <span>0123  Main Road, Your City, NY 123456</span>
+                </div>
+                <div class="footer__number">
+                    <span class="footer__icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                    <span> (000) 2345 - 6789</span>
+                </div>
+                <div class="footer__email">
+                    <span class="footer__icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                    <span> info@psd.in.ua</span>
+                </div>
+            </div>
+        </div>
+        <div class="footer__column">
+            <div class="footer__title">My Account</div>
+            <div class="footer__link">My Account</div>
+            <div class="footer__link">Contact</div>
+            <div class="footer__link">Frequently Questions</div>
+            <div class="footer__link">Portfolio</div>
+            <div class="footer__link">Checkout</div>
+        </div>
+        <div class="footer__column">
+            <div class="footer__title">Product</div>
+            <div class="footer__link">About Us</div>
+            <div class="footer__link">Blog</div>
+            <div class="footer__link">Contact</div>
+            <div class="footer__link">Services</div>
+            <div class="footer__link">Portfolio</div>
+        </div>
+        <div class="footer__column">
+            <div class="footer__contain">
+                <div class="footer__title">Follow us:</div>
+                <div class="footer__wrapper">
+                    <div class="footer__socials">
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+                            <span>Google+</span>
+                        </div>
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-pinterest-p" aria-hidden="true"></i></span>
+                            <span>Pinterest</span>
+                        </div>
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-vimeo" aria-hidden="true"></i></span>
+                            <span>Vimeo</span>
+                        </div>
+                    </div>
+                    <div class="footer__socials">
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
+                            <span>Facebook</span>
+                        </div>
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                            <span>Twitter</span>
+                        </div>
+                        <div class="footer__social-item">
+                            <span><i class="fa fa-rss" aria-hidden="true"></i></span>
+                            <span>RSS</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__contain">
+                <div class="footer__title">Payment Methods</div>
+                <div class="footer__payments">
+                    <span><i class="fa fa-cc-mastercard" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-cc-discover" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-cc-amex" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-cc-visa" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-cc-stripe" aria-hidden="true"></i></span>
+                    <i class="fa fa-cc-diners-club" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
+        </div>
+        <nav class="footer__menu">
+            <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Sitemap</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Search</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Search</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Advance</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Search</a>
+                </li>
+                <li class="footer__menu-item">
+                    <a class="footer__menu-link">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__copyright">
+            <span>© 2022  PSD.IN.UA</span>
+            <span> All Rights Reserved.</span>
+        </div>
+    </div>
 </section>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
