responsive max-width 1200

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h3 class="latest-news__info">Praesent mauris. Fusce nec tellus sed augue semper porta.</h3>
         <div class="latest-news__content">
             <div class="latest-news__item">
-                <div class="latest-news__img"><img src="images/latest-news-image-1.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-1.png" alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <div class="latest-news__item">
-                <div class="latest-news__img"><img src="images/latest-news-image-2.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-2.png" alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="latest-news__item">
-                <div class="latest-news__img"><img src="images/latest-image-3.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-image-3.png" alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -438,7 +438,7 @@
 </section>
 <section class="logos">
     <div class="logos__container">
-        <div class="logos__images"><img src="images/logos-images.svg" alt="image"></div>
+        <div class="logos__images"><img class="logos__image" src="images/logos-images.svg" alt="image"></div>
     </div>
 </section>
 <section class="footer">
@@ -555,6 +555,7 @@
         </div>
     </div>
 </section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
