responsive max-width 992

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -116,7 +117,7 @@
                         <div class="banner__text">Lorem Ipsum. Proin gravida nibh velit it’s a cold world</div>
                         <button class="banner__btn">Shop Now</button>
                     </div>
-                    <div class="banner__img"><img src="images/banner-img-1.png" alt="image"></div>
+                    <div class="banner__img"><img class="banner__image" src="images/banner-img-1.png" alt="image"></div>
                 </div>
                 <div class="banner__item">
                     <div class="banner__wrapper">
@@ -127,7 +128,7 @@
                         <div class="banner__text">Lorem Ipsum. Proin gravida nibh velit it’s a cold world</div>
                         <button class="banner__btn">Shop Now</button>
                     </div>
-                    <div class="banner__img"><img src="images/banner-img-2.png" alt="image"></div>
+                    <div class="banner__img"><img class="banner__image" src="images/banner-img-2.png" alt="image"></div>
                 </div>
             </div>
         </section>
@@ -209,7 +210,8 @@
         <h3 class="latest-news__info">Praesent mauris. Fusce nec tellus sed augue semper porta.</h3>
         <div class="latest-news__content">
             <div class="latest-news__item">
-                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-1.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-1.png"
+                                                   alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -224,7 +226,8 @@
                 </div>
             </div>
             <div class="latest-news__item">
-                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-2.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-news-image-2.png"
+                                                   alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -239,7 +242,8 @@
                 </div>
             </div>
             <div class="latest-news__item">
-                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-image-3.png" alt="image"></div>
+                <div class="latest-news__img"><img class="latest-news__image" src="images/latest-image-3.png"
+                                                   alt="image"></div>
                 <div class="latest-news__wrapper">
                     <div class="latest-news__title">Porem ipsum dolor sit ame</div>
                     <div class="latest-news__subtitle">Lorem Ipsum. Proin gravida nibh</div>
@@ -444,88 +448,93 @@
 <section class="footer">
     <div class="footer__container">
         <div class="footer__content">
-        <div class="footer__column">
-            <div class="footer__title">About company</div>
-            <div class="footer__info">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh velit it’s a cold
-                world out there.
-            </div>
-            <div class="footer__contacts">
-                <div class="footer__address">
-                    <span class="footer__icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                    <span>0123  Main Road, Your City, NY 123456</span>
-                </div>
-                <div class="footer__number">
-                    <span class="footer__icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                    <span> (000) 2345 - 6789</span>
-                </div>
-                <div class="footer__email">
-                    <span class="footer__icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                    <span> info@psd.in.ua</span>
-                </div>
-            </div>
-        </div>
-        <div class="footer__column">
-            <div class="footer__title">My Account</div>
-            <div class="footer__link">My Account</div>
-            <div class="footer__link">Contact</div>
-            <div class="footer__link">Frequently Questions</div>
-            <div class="footer__link">Portfolio</div>
-            <div class="footer__link">Checkout</div>
-        </div>
-        <div class="footer__column">
-            <div class="footer__title">Product</div>
-            <div class="footer__link">About Us</div>
-            <div class="footer__link">Blog</div>
-            <div class="footer__link">Contact</div>
-            <div class="footer__link">Services</div>
-            <div class="footer__link">Portfolio</div>
-        </div>
-        <div class="footer__column">
-            <div class="footer__contain">
-                <div class="footer__title">Follow us:</div>
-                <div class="footer__wrapper">
-                    <div class="footer__socials">
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-google-plus" aria-hidden="true"></i></span>
-                            <span>Google+</span>
-                        </div>
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-pinterest-p" aria-hidden="true"></i></span>
-                            <span>Pinterest</span>
-                        </div>
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-vimeo" aria-hidden="true"></i></span>
-                            <span>Vimeo</span>
-                        </div>
+            <div class="footer__row">
+                <div class="footer__column">
+                    <div class="footer__title">About company</div>
+                    <div class="footer__info">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh velit it’s
+                        a cold
+                        world out there.
                     </div>
-                    <div class="footer__socials">
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
-                            <span>Facebook</span>
+                    <div class="footer__contacts">
+                        <div class="footer__address">
+                            <span class="footer__icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                            <span>0123  Main Road, Your City, NY 123456</span>
                         </div>
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
-                            <span>Twitter</span>
+                        <div class="footer__number">
+                            <span class="footer__icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                            <span> (000) 2345 - 6789</span>
                         </div>
-                        <div class="footer__social-item">
-                            <span><i class="fa fa-rss" aria-hidden="true"></i></span>
-                            <span>RSS</span>
+                        <div class="footer__email">
+                            <span class="footer__icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                            <span> info@psd.in.ua</span>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="footer__contain">
-                <div class="footer__title">Payment Methods</div>
-                <div class="footer__payments">
-                    <span><i class="fa fa-cc-mastercard" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-cc-discover" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-cc-amex" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-cc-visa" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-cc-stripe" aria-hidden="true"></i></span>
-                    <i class="fa fa-cc-diners-club" aria-hidden="true"></i>
+                <div class="footer__column">
+                    <div class="footer__title">My Account</div>
+                    <div class="footer__link">My Account</div>
+                    <div class="footer__link">Contact</div>
+                    <div class="footer__link">Frequently Questions</div>
+                    <div class="footer__link">Portfolio</div>
+                    <div class="footer__link">Checkout</div>
                 </div>
             </div>
-        </div>
+            <div class="footer__row">
+                <div class="footer__column">
+                    <div class="footer__title">Product</div>
+                    <div class="footer__link">About Us</div>
+                    <div class="footer__link">Blog</div>
+                    <div class="footer__link">Contact</div>
+                    <div class="footer__link">Services</div>
+                    <div class="footer__link">Portfolio</div>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__contain">
+                        <div class="footer__title">Follow us:</div>
+                        <div class="footer__wrapper">
+                            <div class="footer__socials">
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+                                    <span>Google+</span>
+                                </div>
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-pinterest-p" aria-hidden="true"></i></span>
+                                    <span>Pinterest</span>
+                                </div>
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-vimeo" aria-hidden="true"></i></span>
+                                    <span>Vimeo</span>
+                                </div>
+                            </div>
+                            <div class="footer__socials">
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
+                                    <span>Facebook</span>
+                                </div>
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                                    <span>Twitter</span>
+                                </div>
+                                <div class="footer__social-item">
+                                    <span><i class="fa fa-rss" aria-hidden="true"></i></span>
+                                    <span>RSS</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__contain">
+                        <div class="footer__title">Payment Methods</div>
+                        <div class="footer__payments">
+                            <span><i class="fa fa-cc-mastercard" aria-hidden="true"></i></span>
+                            <span><i class="fa fa-cc-discover" aria-hidden="true"></i></span>
+                            <span><i class="fa fa-cc-amex" aria-hidden="true"></i></span>
+                            <span><i class="fa fa-cc-visa" aria-hidden="true"></i></span>
+                            <span><i class="fa fa-cc-stripe" aria-hidden="true"></i></span>
+                            <i class="fa fa-cc-diners-club" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <nav class="footer__menu">
             <ul class="footer__menu-list">
