footer and navbar max-width 768px

--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
         <div class="meStore__contain">
             <nav class="top-menu navbar navbar-expand-md navbar-light">
                 <div class="meStore__logo navbar-brand">MeStore</div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-toggler"
-                        aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="meStore__wrapper">
+                <div class="meStore__row">
+                    <div class="meStore__icons">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        <i class="fa fa-list-ul" aria-hidden="true"></i>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-toggler"
+                            aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <ul class="navbar-nav mt-2 mt-lg-0">
                         <li class="nav-item">
@@ -60,10 +68,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="meStore__icons">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <i class="fa fa-list-ul" aria-hidden="true"></i>
                 </div>
             </nav>
         </div>
