--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     <form class="subscribe__form">
                         <label for="email"></label>
                         <input type="text" id="email" name="email" autocomplete="off">
-                        <input type="submit" value="Subscribe"/>
+                        <input type="submit" value="Read More"/>
                     </form>
                 </div>
             </div>
