--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <section class="top-banner">
     <div class="top-banner__container">
         <div class="top-banner__text"> Free International Shipping with $75 Purchase</div>
+        <div class="top-banner__icon"><i class="fa fa-times" aria-hidden="true"></i></div>
     </div>
 </section>
 <section class="meStore">
